# LibreSubtitles

./: .gitignore  README.md  pyproject.toml
libresubtitles/: cli.py
libresubtitles/core/: audio.py  globals.py  splitter.py  stt.py
