[project]
name = "libresubtitles"
version = "0.1.0"
description = "Privacy-first AI subtitles for videos and audio"
authors = [
    {name = "Chirag Juneja",email = "chiragjuneja6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-whisper (>=20250625,<20250626)",
    "ipython (>=9.5.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^9.5.0"

